# nuclex-vorbis

./: .gitmodules  CMakeLists.txt  ReadMe.md  config.h  nuclex-vorbis (msvc-14.2).vcxproj  nuclex-vorbis (msvc-14.2).vcxproj.filters  nuclex-vorbisenc (msvc-14.2).vcxproj  nuclex-vorbisenc (msvc-14.2).vcxproj.filters  nuclex-vorbisfile (msvc-14.2).vcxproj  nuclex-vorbisfile (msvc-14.2).vcxproj.filters
